feat: added some new authentication stuff